# daihen-physical-ai-interfaces

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/src/interfaces_backend/: main.py
backend/tests/: conftest.py
backend/tests/e2e/: helpers.py  test_training_instance_candidates_live.py
backend/tests/unit/: test_auth_api.py  test_backfill_dataset_merge_lineage_script.py  test_build_error_reports_service.py  test_build_jobs_service.py  test_build_management_service.py  test_builds_api.py  test_bundled_torch_build_service.py  test_cleanup_checkpoint_last_copies_script.py  test_dataset_lifecycle_model_sync.py  test_dataset_merge_jobs_service.py  test_dataset_sync_jobs_service.py  test_docker_services.py  test_experiments_episode_links_validation.py  test_experiments_list_api.py  test_inference_model_compatibility.py  test_inference_models_api.py  test_inference_recording_api.py  test_inference_recording_controller.py  test_inference_runtime_manager.py  test_inference_runtime_targets_service.py  test_inference_session_manager.py  test_inference_stop_api.py  test_lerobot_runtime.py  test_operate_api.py  test_patch_checkpoint_model_artifacts_script.py  test_profiles_api.py  test_r2_db_sync_service.py  test_realtime_runtime.py  test_realtime_tab_sessions_api.py  test_recording_bulk_api.py  test_recording_continue_api.py  test_recording_episode_redo_api.py  test_recording_list_api.py  test_recording_session_manager.py  test_request_auth.py  test_runtime_env_service.py  test_settings_service.py  test_storage_bulk_actions.py  (+25 more)
cli/: DESIGN.md  (+1 more)
(+312 files in other folders)
